<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Srm云</string>
    <string name="hello_world">Hello world!</string>
	<string name="detail">detail</string>
	<!-- 登录页面 -->
	<string name="handcloud">Hand Cloud</string>
	<string name="username">用户名</string>
	<string name="password">密码</string>
	<string name="login">登录</string>
	<string name="remember">记住登录</string>
	<!-- 订单页面 -->
	<string name="order_list_name">我发出的订单</string>
	<string name="deliver_name">送货单查询</string>
	
    <!-- /////  设置页面     -->
    <string name="userInfomation">用户信息</string>
    <string name="changeChara">更换角色</string>
    <string name="changePassword">更换密码</string>
    <string name="QandA">常见问题</string>
    <string name="comment">欢迎吐糟</string>
    <string name="checkVersion">版本升级</string>
    <string name="exit">退出系统</string>
    <drawable name="white">#ffffff</drawable>
    <drawable name="grey">#eeeeed</drawable>
    <!-- /////  查询送货单号 -->
    <string name="deliveryBillNo">送货单号:</string>
    <string name="deliveryDateFrom">发货日期从:</string>
    <string name="deliveryDateTo">发货日期到:</string>
    <string name="search4delivert">查询</string>
    <string name="excludeConfirmFlag">排除已确认订单</string>
    <string name="urgentStatus">仅显示加急订单</string>
    <!-- /////  查询采购单号 -->
    <string name="purchaseBillNo">采购订单号</string>
    <string name="purchaseDateFrom">发布日期从</string>
    <string name="purchaseDateTo">发布日期至</string>
    <string name="onlyUrgent">仅显示加急订单</string>
    <!-- //// 订单列表    -->
    <string name="issuedOrders">我发出的订单</string>
    <string name="deliveryBill">送货单查询</string>
    <!-- //// 消息列表    -->
    <string name="notice">业务通知单</string>
    <string name="mail">站内信</string>
    <!-- //// 财务 -->
    <string name="myStatement">我的对账单</string>
    <string name="myInvoice">我的采购发票</string>
    <string name="myPayment">我的付款</string>
    <!-- //// 发现 -->
    <string name="newProduct">发现新产品</string>
    <string name="push">云推送</string>
    <string name="announcement">平台公告</string>
    <!-- //// 待发货 -->
    <string name="urgent">整单加急</string>
    <string name="cancelUrgent">取消加急</string>
    <!-- //// 订单详情 -->
    <string name="consigner">收货人：</string>
    <string name="consignerOrganization">收货组织：</string>
    <string name="orderType">订单类型：</string>
    <string name="price">单价：</string>
    <string name="amount">数量：</string>
    <string name="poNum">订单号</string>
    <string name="shipQuantity">发运数量</string>
    <string name="receiveQuantity">已接收</string>
    <string name="onTheWayQuantity">在途</string>
    <string name="locationName">收货地点：</string>
    <string name="back">返回</string>
    <string name="search">搜索</string>
    
    <drawable name="gridfocustrue">#eeeeed</drawable>
    <drawable name="gridfocusfalse">#ffffff</drawable>
</resources>
