<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0eff5"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/orderListLL"
        style="@style/OrderListActivityLL"
        android:layout_marginTop="10dp" >

        <ImageView
            style="@style/SettingActivityIcon"
            android:contentDescription="@string/QandA"
            android:src="@drawable/shop_list" />

        <TextView
            style="@style/SettingActivity"
            android:text="@string/order_list_name" />

        <ImageView
            style="@style/SettingActivityDetail"
            android:contentDescription="@string/detail" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">
		<View style="@style/OrderDivider"/>
	</LinearLayout>
    <LinearLayout
        android:id="@+id/shipListSearchLL"
        style="@style/OrderListActivityLL" >

        <ImageView
            style="@style/SettingActivityIcon"
            android:contentDescription="@string/QandA"
            android:src="@drawable/receive_list" />

        <TextView
            style="@style/SettingActivity"
            android:text="@string/deliver_name" />

        <ImageView
            style="@style/SettingActivityDetail"
            android:contentDescription="@string/detail" />
    </LinearLayout>

</LinearLayout>