<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:background="@color/bkblue"
        >

        <ImageButton
            android:id="@+id/backImgBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:background="@drawable/back_textview_selector"
            android:src="@drawable/white_left">
            
        </ImageButton>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="查询"
            android:textSize="22sp"
            android:textColor="#ffffff">
        </TextView>

    </RelativeLayout>
    <RelativeLayout
			style="@style/SearchLayout">
		<ImageView
		    android:id="@+id/deliveryNoImg"
			style="@style/Search4Img"
		    android:src="@drawable/delivery_no"/>
        <TextView
            style="@style/Search4NoText"
            android:layout_toRightOf="@+id/deliveryNoImg"
            android:text="@string/deliveryBillNo"
            >
        </TextView>

        <EditText
            android:id="@+id/deliveryNoView"
			style="@style/Search4NoView"
			
			>
            
        </EditText>
    </RelativeLayout>
	<View style="@style/OrderDivider"/>
	<RelativeLayout
	    style="@style/SearchLayout">
        <ImageView
		    android:id="@+id/deliveryDateFromImg"
			style="@style/Search4Img"
		    android:src="@drawable/date_from"/>
        <TextView
            style="@style/Search4NoText"
            android:layout_toRightOf="@+id/deliveryDateFromImg"
            android:text="@string/deliveryDateFrom">
        </TextView>
        <TextView
            android:id="@+id/deliveryDateFrom"
			style="@style/DateSearch4NoView"
			android:text="2014-01-01">
		</TextView>

	</RelativeLayout>
	<View style="@style/OrderDivider"/>
	<RelativeLayout
	    style="@style/SearchLayout">
        <ImageView
		    android:id="@+id/deliveryDateToImg"
			style="@style/Search4Img"
		    android:src="@drawable/date_to"/>
        <TextView
            style="@style/Search4NoText"
            android:layout_toRightOf="@+id/deliveryDateToImg"
            android:text="@string/deliveryDateTo">
        </TextView>
        <TextView
            android:id="@+id/deliveryDateTo"
			style="@style/DateSearch4NoView"
			android:text="2014-12-25"
			>
		</TextView>

	</RelativeLayout>
	<View style="@style/OrderDivider"/>
	<LinearLayout
	    style="@style/SearchLayout"
	    android:orientation="horizontal">
    <CheckBox
        android:id="@+id/excludeConfirmFlag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"                
        android:checked="false"
        android:text="@string/excludeConfirmFlag"
        style="@style/CustomCheckboxTheme" />
   	</LinearLayout>
   	<View style="@style/OrderDivider"/>
   	<LinearLayout
   	    style="@style/SearchLayout"
   	    android:orientation="horizontal">
    <CheckBox
        android:id="@+id/urgentStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"       
        android:checked="false"
        android:text="@string/urgentStatus"
        style="@style/CustomCheckboxTheme" />    
   	</LinearLayout>
   	<View style="@style/OrderDivider"/>
	<Button
	    android:id="@+id/search4DeliveryButton"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginTop="35dp"
	    android:text="@string/search4delivert"
	    android:textColor="#ffffff"
	    android:background="@drawable/btn_press_selector"/>

</LinearLayout>
