<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:paddingBottom="5dp"
    android:paddingTop="20dp"
    android:paddingLeft="5dp" >

    <TextView
        android:id="@+id/itemCodeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="01010-80610"
        android:textColor="#9b9b9b" >
    </TextView>
	<TextView
	    android:id="@+id/itemStatusTextView"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="已关闭"
	    android:layout_alignTop="@+id/itemCodeTextView"
	    android:layout_alignParentRight="true"
	    android:layout_marginRight="30dp"
	    android:textColor="#cc3232">
	    
	</TextView>
    <TextView
        android:id="@+id/itemDescTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemCodeTextView"
        android:layout_alignLeft="@+id/itemCodeTextView"
        android:layout_marginBottom="18dp"
        android:layout_marginTop="10dp"
        android:text="TEST"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" >
    </TextView>

    <TextView
        android:id="@+id/poNumTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/itemCodeTextView"
        android:layout_below="@+id/itemDescTextView"
        android:text="@string/poNum"
        android:textColor="#e79100" 
        android:textSize="12sp" >
    </TextView>

    <TextView
        android:id="@+id/poNumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/poNumTitle"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/poNumTitle"
        android:text="110600631"
        android:textColor="#e79100" 
        android:textSize="12sp" >
    </TextView>

    <TextView
        android:id="@+id/shipQuantityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/poNumTextView"
        android:layout_marginLeft="50dp"
        android:textColor="#e79100" 
        android:layout_toRightOf="@+id/poNumTextView"
        android:text="@string/shipQuantity"
        android:textSize="12sp" >
    </TextView>
    

    
    <TextView
        android:id="@+id/shipQuantityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/shipQuantityTitle"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/shipQuantityTitle"
        android:text="0包"
        android:textColor="#e79100" 
        android:textSize="12sp" >
    </TextView>

    <TextView
        android:id="@+id/receiveQuantityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#e79100" 
        android:layout_marginTop="5dp"
        android:layout_below="@+id/poNumTitle"
        android:layout_alignLeft="@+id/poNumTitle"
        android:text="@string/receiveQuantity"
        android:textSize="12sp" >
    </TextView>
    
    <TextView
        android:id="@+id/receiveQuantityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#e79100" 
        android:layout_alignTop="@+id/receiveQuantityTitle"
        android:layout_alignLeft="@+id/poNumTextView"
        android:text="0包"
        android:textSize="12sp">
    </TextView>
    
    <TextView
        android:id="@+id/onTheWayQuantityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#e79100" 
        android:layout_alignTop="@+id/receiveQuantityTitle"
        android:layout_alignLeft="@+id/shipQuantityTitle"
        android:text="@string/onTheWayQuantity"
        android:textSize="12sp">
    </TextView>
    
    <TextView
        android:id="@+id/onTheWayQuantityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/onTheWayQuantityTitle"
        android:layout_alignLeft="@+id/shipQuantityTextView"
 		android:textColor="#e79100" 
 		android:text="0包"
        android:textSize="12sp" >
    </TextView>


    <View 
        style="@style/OrderDivider"
        android:layout_marginRight="0dp"
        android:layout_marginTop="3dp"
        android:layout_below="@+id/receiveQuantityTextView"/>
</RelativeLayout>